// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test getSelection & setSelection > Basic 1`] = `
{
  "blocks": [
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 0",
          "type": "text",
        },
      ],
      "id": "paragraph-0",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 1",
          "type": "text",
        },
      ],
      "id": "paragraph-1",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
}
`;

exports[`Test getSelection & setSelection > Contains block with children 1`] = `
{
  "blocks": [
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 1",
          "type": "text",
        },
      ],
      "id": "paragraph-1",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "content": [
                {
                  "styles": {},
                  "text": "Double Nested Paragraph 0",
                  "type": "text",
                },
              ],
              "id": "double-nested-paragraph-0",
              "props": {
                "backgroundColor": "default",
                "textAlignment": "left",
                "textColor": "default",
              },
              "type": "paragraph",
            },
          ],
          "content": [
            {
              "styles": {},
              "text": "Nested Paragraph 0",
              "type": "text",
            },
          ],
          "id": "nested-paragraph-0",
          "props": {
            "backgroundColor": "default",
            "textAlignment": "left",
            "textColor": "default",
          },
          "type": "paragraph",
        },
      ],
      "content": [
        {
          "styles": {},
          "text": "Paragraph with children",
          "type": "text",
        },
      ],
      "id": "paragraph-with-children",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 2",
          "type": "text",
        },
      ],
      "id": "paragraph-2",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
}
`;

exports[`Test getSelection & setSelection > Ends in block with children 1`] = `
{
  "blocks": [
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 1",
          "type": "text",
        },
      ],
      "id": "paragraph-1",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "content": [
                {
                  "styles": {},
                  "text": "Double Nested Paragraph 0",
                  "type": "text",
                },
              ],
              "id": "double-nested-paragraph-0",
              "props": {
                "backgroundColor": "default",
                "textAlignment": "left",
                "textColor": "default",
              },
              "type": "paragraph",
            },
          ],
          "content": [
            {
              "styles": {},
              "text": "Nested Paragraph 0",
              "type": "text",
            },
          ],
          "id": "nested-paragraph-0",
          "props": {
            "backgroundColor": "default",
            "textAlignment": "left",
            "textColor": "default",
          },
          "type": "paragraph",
        },
      ],
      "content": [
        {
          "styles": {},
          "text": "Paragraph with children",
          "type": "text",
        },
      ],
      "id": "paragraph-with-children",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
}
`;

exports[`Test getSelection & setSelection > Ends in nested block 1`] = `
{
  "blocks": [
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 1",
          "type": "text",
        },
      ],
      "id": "paragraph-1",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "content": [
                {
                  "styles": {},
                  "text": "Double Nested Paragraph 0",
                  "type": "text",
                },
              ],
              "id": "double-nested-paragraph-0",
              "props": {
                "backgroundColor": "default",
                "textAlignment": "left",
                "textColor": "default",
              },
              "type": "paragraph",
            },
          ],
          "content": [
            {
              "styles": {},
              "text": "Nested Paragraph 0",
              "type": "text",
            },
          ],
          "id": "nested-paragraph-0",
          "props": {
            "backgroundColor": "default",
            "textAlignment": "left",
            "textColor": "default",
          },
          "type": "paragraph",
        },
      ],
      "content": [
        {
          "styles": {},
          "text": "Paragraph with children",
          "type": "text",
        },
      ],
      "id": "paragraph-with-children",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
}
`;

exports[`Test getSelection & setSelection > Ends in table 1`] = `
{
  "blocks": [
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 6",
          "type": "text",
        },
      ],
      "id": "paragraph-6",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [],
      "content": {
        "columnWidths": [
          undefined,
          undefined,
          undefined,
        ],
        "rows": [
          {
            "cells": [
              [
                {
                  "styles": {},
                  "text": "Cell 1",
                  "type": "text",
                },
              ],
              [
                {
                  "styles": {},
                  "text": "Cell 2",
                  "type": "text",
                },
              ],
              [
                {
                  "styles": {},
                  "text": "Cell 3",
                  "type": "text",
                },
              ],
            ],
          },
          {
            "cells": [
              [
                {
                  "styles": {},
                  "text": "Cell 4",
                  "type": "text",
                },
              ],
              [
                {
                  "styles": {},
                  "text": "Cell 5",
                  "type": "text",
                },
              ],
              [
                {
                  "styles": {},
                  "text": "Cell 6",
                  "type": "text",
                },
              ],
            ],
          },
          {
            "cells": [
              [
                {
                  "styles": {},
                  "text": "Cell 7",
                  "type": "text",
                },
              ],
              [
                {
                  "styles": {},
                  "text": "Cell 8",
                  "type": "text",
                },
              ],
              [
                {
                  "styles": {},
                  "text": "Cell 9",
                  "type": "text",
                },
              ],
            ],
          },
        ],
        "type": "tableContent",
      },
      "id": "table-0",
      "props": {
        "textColor": "default",
      },
      "type": "table",
    },
  ],
}
`;

exports[`Test getSelection & setSelection > Starts in block with children 1`] = `
{
  "blocks": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "content": [
                {
                  "styles": {},
                  "text": "Double Nested Paragraph 0",
                  "type": "text",
                },
              ],
              "id": "double-nested-paragraph-0",
              "props": {
                "backgroundColor": "default",
                "textAlignment": "left",
                "textColor": "default",
              },
              "type": "paragraph",
            },
          ],
          "content": [
            {
              "styles": {},
              "text": "Nested Paragraph 0",
              "type": "text",
            },
          ],
          "id": "nested-paragraph-0",
          "props": {
            "backgroundColor": "default",
            "textAlignment": "left",
            "textColor": "default",
          },
          "type": "paragraph",
        },
      ],
      "content": [
        {
          "styles": {},
          "text": "Paragraph with children",
          "type": "text",
        },
      ],
      "id": "paragraph-with-children",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 2",
          "type": "text",
        },
      ],
      "id": "paragraph-2",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
}
`;

exports[`Test getSelection & setSelection > Starts in nested block 1`] = `
{
  "blocks": [
    {
      "children": [
        {
          "children": [],
          "content": [
            {
              "styles": {},
              "text": "Double Nested Paragraph 0",
              "type": "text",
            },
          ],
          "id": "double-nested-paragraph-0",
          "props": {
            "backgroundColor": "default",
            "textAlignment": "left",
            "textColor": "default",
          },
          "type": "paragraph",
        },
      ],
      "content": [
        {
          "styles": {},
          "text": "Nested Paragraph 0",
          "type": "text",
        },
      ],
      "id": "nested-paragraph-0",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 2",
          "type": "text",
        },
      ],
      "id": "paragraph-2",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
}
`;

exports[`Test getSelection & setSelection > Starts in table 1`] = `
{
  "blocks": [
    {
      "children": [],
      "content": {
        "columnWidths": [
          undefined,
          undefined,
          undefined,
        ],
        "rows": [
          {
            "cells": [
              [
                {
                  "styles": {},
                  "text": "Cell 1",
                  "type": "text",
                },
              ],
              [
                {
                  "styles": {},
                  "text": "Cell 2",
                  "type": "text",
                },
              ],
              [
                {
                  "styles": {},
                  "text": "Cell 3",
                  "type": "text",
                },
              ],
            ],
          },
          {
            "cells": [
              [
                {
                  "styles": {},
                  "text": "Cell 4",
                  "type": "text",
                },
              ],
              [
                {
                  "styles": {},
                  "text": "Cell 5",
                  "type": "text",
                },
              ],
              [
                {
                  "styles": {},
                  "text": "Cell 6",
                  "type": "text",
                },
              ],
            ],
          },
          {
            "cells": [
              [
                {
                  "styles": {},
                  "text": "Cell 7",
                  "type": "text",
                },
              ],
              [
                {
                  "styles": {},
                  "text": "Cell 8",
                  "type": "text",
                },
              ],
              [
                {
                  "styles": {},
                  "text": "Cell 9",
                  "type": "text",
                },
              ],
            ],
          },
        ],
        "type": "tableContent",
      },
      "id": "table-0",
      "props": {
        "textColor": "default",
      },
      "type": "table",
    },
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 7",
          "type": "text",
        },
      ],
      "id": "paragraph-7",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
}
`;
